add swager and unit tests
